--- a/force-app/main/default/classes/SummitEventsPrintItinerariesExtension.cls
+++ b/force-app/main/default/classes/SummitEventsPrintItinerariesExtension.cls
@@ -24,6 +24,7 @@ public with sharing class SummitEventsPrintItinerariesExtension {
                 SELECT Id, Generated_Itinerary__c, Registrant_First_Name__c, Registrant_Last_Name__c,Event_Instance_Date__c, Event_Name__c, Preferred_First_Name_Formatted__c
                 FROM Summit_Events_Registration__c
                 WHERE Event_Instance__c = :SEInstance.Id
+                WITH SECURITY_ENFORCED
                 ORDER BY Registrant_Last_Name__c
         ];
     }
@@ -80,7 +81,7 @@ public with sharing class SummitEventsPrintItinerariesExtension {
         if (!String.isBlank(String.valueOf(eventRegs[0].Event_Instance_Date__c))) {
             fileName += String.valueOf(eventRegs[0].Event_Instance_Date__c);
         } else {
-            fileName += String.valueOf(date.today());
+            fileName += String.valueOf(Date.today());
         }
         return fileName;
     }
