--- a/force-app/main/default/classes/SummitEventsConfirmationController.cls
+++ b/force-app/main/default/classes/SummitEventsConfirmationController.cls
@@ -25,7 +25,7 @@ public with sharing class SummitEventsConfirmationController {
                             Hand_Raise_Action__c
                     FROM Summit_Events__c
                     WHERE Id = :eventInformation.eventId
-                    LIMIT 1
+                    WITH SECURITY_ENFORCED
             ];
 
             templateSelected = seaShared.getTemplate(eventPage.Template__c);
@@ -57,15 +57,10 @@ public with sharing class SummitEventsConfirmationController {
             String eventTitle = '';
             if (!String.isBlank(eventInformation.registrationId)) {
                 Summit_Events_Registration__c evtReg = [
-                        SELECT Id, Status__c, Contact__c, Event_Name__c, Event_Instance_Title__c, Event_Instance__c,
-                                Registrant_First_Name__c, Registrant_Last_Name__c,Registrant_Gender__c,
-                                Event_Instance_Date__c, Registrant_Street_1__c, Registrant_Street_2__c, Registrant_City__c,
-                                Registrant_State__c, Registrant_Zip__c, Registrant_Email__c, Registrant_High_School_Grad_Year__c,
-                                Registrant_Parent_First_Name__c, Registrant_Parent_Last_Name__c, Registrant_Parent_Email__c,
-                                Registrant_Program_Interest__c
+                        SELECT Id, Status__c, Event_Name__c, Event_Instance_Title__c
                         FROM Summit_Events_Registration__c
                         WHERE Id = :eventInformation.registrationId
-                        LIMIT 1
+                        WITH SECURITY_ENFORCED
                 ];
 
                 if (!String.isBlank(evtReg.Event_Instance_Title__c)) {
